--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sLyr@ck",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "axios": "^1.3.4",
     "express": "^4.18.2",
     "modules": "^0.4.0",
     "nod": "^0.2.0",
     "node-telegram-bot-api": "^0.61.0",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "webpack": "5.75.0"
   },
   "engines": {
-    "node": ">=5.6.0"
+    "node": "18.x"
   },
-  "keywords": [],
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^2.0.12",
+    "webpack-cli": "^4.10.0"
+  }
+  
 }
