--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "sLyr@ck",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0",
     "axios": "^1.3.4",
+    "dotenv": "^10.0.0",
     "express": "^4.18.2",
+    "fetch": "^1.1.0",
+    "isomorphic-fetch": "^3.0.0",
     "modules": "^0.4.0",
     "nod": "^0.2.0",
+    "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.61.0",
+    "openai": "^3.2.1",
     "telegraf": "^4.12.2",
+    "telegram-bot-api": "^2.0.1",
     "webpack": "5.75.0"
   },
   "engines": {
@@ -26,5 +31,4 @@
     "nodemon": "^2.0.12",
     "webpack-cli": "^4.10.0"
   }
-  
 }
