--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nod": "^0.2.0",
     "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.61.0",
-    "openai": "^3.2.1",
+    "openai": "^3.3.0",
+    "openai-api": "^1.3.1",
     "telegraf": "^4.12.2",
     "telegram-bot-api": "^2.0.1",
     "webpack": "5.75.0"
